<resources>
    <string name="app_name">EntregasApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="txtEntrar">Entrar</string>
    <string name="txtentregas">Minhas Entregas</string>
    <string name="txtsair">Sair</string>
    <string name="txtLogar">Entrar</string>
    <string name="txtUsuario">Usuario</string>
    <string name="txtSenha">Senha</string>
    <string name="txtAddEntrega">Nova Entrega</string>
    <string name="txtEntregasDisponiveis">Entregas Disponiveis</string>
    <string name="txtEntregasHistorico">Entregas Encerradas</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtNome">Nome</string>
    <string name="txtCPF">CPF</string>
    <string name="txtIdade">Idade</string>
    <string name="txtTelefone">Telefone</string>
    <string name="txtEndereco">Endereço</string>
    <string name="txtEmail">Email</string>
    <string name="txtProduto">Produto</string>
    <string name="txtBairroOrigem">Origem</string>
    <string name="txtDestino">Destino</string>
    <string name="txtObs">Observação</string>
    <string name="txtFazerPedido">Fazer Pedido</string>
    <string name="txtCadastroDePedidos">Cadastro de Pedidos</string>
    <string name="txtCadastroEntregas">Nova Entrega</string>
    <string name="txtSolicitarEntrega">Solicitar</string>
    <string name="txtentregasAll">Entregas em Andamento</string>
    <string name="txtAddNewUser">Novo Usuário</string>
    <string name="txtAddUser">Novo Cliente</string>
    <string name="txtAdicionarUsuario">Cadastrar</string>
    <string name="txtAceitarEntrega">Aceitar</string>
    <string name="txtVoltar">Voltar</string>
</resources>