<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <menu />
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_entrar_all"
            android:icon="@android:drawable/ic_lock_idle_lock"
            android:title="@string/txtEntrar" />
        <item
            android:id="@+id/nav_add_user_adm_moto"
            android:icon="@android:drawable/stat_notify_more"
            android:title="@string/txtAddUser" />
        <item
            android:id="@+id/nav_add_entrega_cliente"
            android:icon="@android:drawable/stat_notify_more"
            android:title="@string/txtAddEntrega"
            android:visible="false" />
        <item
            android:id="@+id/nav_entregas_atuais_all"
            android:icon="@android:drawable/ic_dialog_dialer"
            android:title="@string/txtentregasAll"
            android:visible="false" />
        <item
            android:id="@+id/nav_entregas_aguardando_moto"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/txtEntregasDisponiveis"
            android:visible="false" />
        <item
            android:id="@+id/nav_entregas_finalizadas_all"
            android:icon="?attr/actionModePasteDrawable"
            android:title="@string/txtEntregasHistorico"
            android:visible="false" />
        <item
            android:id="@+id/nav_sair_all"
            android:checkable="false"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="@string/txtsair"
            android:visible="false" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home"
            android:visible="false" />
    </group>
    <group />
</menu>